# UniversityProjects

./: CMakeLists.txt  README.md
Logic Circuits/Midterm Project/: 16bit_adder.v  READMe.md
Principles Of Programming/Compiler/: README.md  fileoutput.c  main.c  sina_mohammad.c  sina_part.c  syntax_analyze.c  syntax_analyze_complete.c
